# JCpp

./: CMakeLists.txt  CMakePresets.json
JCppLib/: CMakeLists.txt  EnumHelper.h  JClass.cpp  JClass.h  JObject.cpp  JObject.h  Java.cpp  Java.h  Main.cpp  UsingAlias.h  Util.cpp  Util.h
JCppTest/: CMakeLists.txt  JClassTest.cpp  JCppTest.cpp  JObjectTest.cpp
